--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,14 @@
             <version>1.2</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+        <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
         <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.4.1208-jdbc42-atlassian-hosted</version>
+            <version>9.1-901.jdbc4</version>
         </dependency>
+
+
 
         <dependency>
             <groupId>junit</groupId>
